Self install Fira

--- a/devdays-2025-ai/slides/css/theme/source/custom.scss
+++ b/devdays-2025-ai/slides/css/theme/source/custom.scss
@@ -23,8 +23,8 @@ $mainColor: #fff;
 $headingColor: #F7DD71;
 
 $mainFontSize: 42px;
-$mainFont: 'FiraCode Nerd Font', Helvetica, sans-serif;
-$headingFont: 'FiraCode Nerd Font', Helvetica, sans-serif;
+$mainFont: 'Fira Code', Helvetica, sans-serif;
+$headingFont: 'Fira Code', Helvetica, sans-serif;
 $headingTextShadow: none;
 $headingLetterSpacing: normal;
 $headingTextTransform: uppercase;
